--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <java.version>17</java.version>
         <vaadin.version>24.4.11</vaadin.version>
         <langchain4j.version>0.35.0</langchain4j.version>
+<!--        <langchain4j.version>1.0.0-beta3-SNAPSHOT</langchain4j.version>-->
     </properties>
 
     <parent>
@@ -103,6 +104,11 @@
             <artifactId>langchain4j-reactor</artifactId>
             <version>${langchain4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-ollama</artifactId>
+            <version>${langchain4j.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -157,6 +163,10 @@
                     <plugin>
                         <groupId>com.vaadin</groupId>
                         <artifactId>vaadin-maven-plugin</artifactId>
+                        <configuration>
+                            <pnpmEnable>false</pnpmEnable>
+                            <debug>true</debug>
+                        </configuration>
                         <version>${vaadin.version}</version>
                         <executions>
                             <execution>
@@ -166,6 +176,14 @@
                                 <phase>compile</phase>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <compilerArgs>
+                                <arg>-parameters</arg>
+                            </compilerArgs>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
