--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,15 @@ langchain4j.open-ai.streaming-chat-model.temperature=0
 langchain4j.open-ai.embedding-model.api-key=${OPENAI_API_KEY}
 langchain4j.open-ai.streaming-chat-model.strict-tools=true
 
+#langchain4j.base-url=http://localhost:11434
+#langchain4j.ollama.chat-model.model-name=mistral
+#langchain4j.ollama.chat-model.temperature=0.0
+#langchain4j.ollama.embedding-model.model-name=mistral
+
 # Logging properties
 langchain4j.open-ai.streaming-chat-model.log-requests=true
-langchain4j.open-ai.streaming-chat-model.log-responses=false
 logging.level.dev.langchain4j=DEBUG
 logging.level.dev.ai4j.openai4j=DEBUG
 logging.level.ai.djl=OFF
+
+vaadin.productionMode=false
