--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ vaadin.productionMode=false
 # Choose the provider by setting the profile at runtime:
 # -Dspring-boot.run.profiles=openai   or   -Dspring-boot.run.profiles=ollama
 # SPRING_PROFILES_ACTIVE=openai       or   SPRING_PROFILES_ACTIVE=ollama
+
+spring.profiles.active=openai
